--- a/bishnupur/index.html
+++ b/bishnupur/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="">DISCOVER</a></li>
                 <li><a href="">COMMUNITY</a></li>
-                <li><a href="">SHOP</a></li>
+                <li><a href="../Shop/index.html">SHOP</a></li>
                 <li><a href="">ABOUT US</a></li>
                 <li><a href="">REGISTER</a></li>
             </ul>
@@ -24,12 +24,12 @@
             <img src="image/banner.jpg" alt="">
         </div>
         <div class="ele_list">
-            <a href="../index.html"><img  src="image/fulia.jpg" alt=""></a>
-            <!-- <img src="image/fulia.jpg" alt=""> -->
-            <img src="image/SBag.jpg" alt="">
-            <img src="image/PHand.jpg" alt="">
-            <img src="image/BTer.jpg" alt="">
-            <img src="image/DTea.jpg" alt="">
+            <!-- <a href="../index.html"><img  src="image/fulia.jpg" alt=""></a> -->
+            <img src="image/rashmancha.jpg" alt="">
+            <img src="image/shyamTemp.jpg" alt="">
+            <img src="image/mmtemp.jpg" alt="">
+            <!-- <img src="image/BTer.jpg" alt="">
+            <img src="image/DTea.jpg" alt=""> -->
         </div>
     </header>
 </body>
