--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>
                     Welcome To India
                 </h1>
-                <p>creative tagline to attarct people</p>
+                <p>"Discover India: Where Traditions Dance with Modernity, Mystical Landscapes Beckon, and Every Moment Unfolds a Story of a Lifetime. Embrace the Incredible!"</p>
                 <button>Start Your Search</button>
             </div>
             <div class="trip_bx">
